--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,16 @@
   "manifest_version": 3,
   "name": "Guru AI",
   "description": "Interactive Learning Extension",
+  "permissions": [
+    "storage",
+    "tabs"
+  ],
   "version": "1.0",
   "action": {
     "default_popup": "main.html",
     "default_icon": "Images/guru_ai_logo.png"
+  },
+  "background": {
+    "service_worker": "background.js"
   }
 }
