--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,14 @@
   "manifest_version": 3,
   "name": "Guru AI",
   "description": "Interactive Learning Extension",
-  "permissions": [
+   "permissions": [
     "storage",
-    "tabs"
+    "tabs",
+    "activeTab"
   ],
+  "background": {
+    "service_worker": "background.js"
+  },
   "version": "1.0",
   "action": {
     "default_popup": "main.html",
